preview-traq/middleware-sablier.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier-staging

spec:
  plugin:
    sablier:
      sablierUrl: http://sablier.sablier.svc.cluster.local
      sessionDuration: 1m
      group: preview-traq-staging
      dynamic:
        displayName: "traQ UI Staging"
        refreshFrequency: 5s
        showDetails: "true"
        theme: ghost
