preview-traq/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview-traq-placeholder
spec:
  template:
    spec:
      containers:
        - name: preview-traq-placeholder
          volumeMounts:
            - name: config-js
              mountPath: /app/override/config.js
              subPath: config.js
      volumes:
        - name: config-json
          configMap:
            name: preview-traq-config
        - name: config-js
          emptyDir: {}
