preview-traq/staging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traq-ui-staging
  labels:
    sablier.enable: "true"
    sablier.group: preview-traq-staging

spec:
  # replicas: 1 # Autoscale by sablier
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: traq-ui-staging
  template:
    metadata:
      labels:
        app: traq-ui-staging
    spec:
      enableServiceLinks: false

      containers:
        - name: traq-ui
          image: ghcr.io/traptitech/traq-ui:master@sha256:e7354c2b14b445b82780f18b5d880d6b46d937398e5aa7e896e837b31321da1a
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
