preview-traq/staging-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traq-preview-staging

spec:
  entryPoints:
    - websecure
  tls:
    secretName: preview-traq-tls
  routes:
    - kind: Rule
      match: Host(`staging-prod.traq-preview.trapti.tech`)
      priority: -100
      middlewares:
        - name: sablier-staging
          namespace: preview-traq
      services:
        - namespace: preview-traq
          kind: Service
          name: traq-ui-staging
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: >-
        Host(`staging-prod.traq-preview.trapti.tech`) && (
        PathPrefix(`/api`) ||
        PathPrefix(`/.well-known`)
        )
      priority: -99
      services:
        - kind: TraefikService
          name: traq-prod@file

    - kind: Rule
      match: Host(`staging-dev.traq-preview.trapti.tech`)
      priority: -100
      middlewares:
        - name: sablier-staging
          namespace: preview-traq
      services:
        - namespace: preview-traq
          kind: Service
          name: traq-ui-staging
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: >-
        Host(`staging-dev.traq-preview.trapti.tech`) && (
        PathPrefix(`/api`) ||
        PathPrefix(`/.well-known`)
        )
      priority: -99
      services:
        - kind: TraefikService
          name: traq-dev@file
